@@ -13,7 +13,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -28,14 +27,26 @@ public class CreateTaskUseCase implements CreateTaskInBound {
     public Task create(Long userId, Long projectId, Task task) {
         log.info("Creating task with userId {} in project {}", userId, projectId);
         Project project = projectRepository.getByIdAndUserId(projectId, userId);
-        task.setProject(project);
-        task.setStatus(TaskStatus.BACKLOG);
+        task.setProject(project)
+            .setStatus(TaskStatus.BACKLOG);
         if (task.getPendingNotifications() != null && task.getDeadline() != null) {
             List<PendingNotification> convertedNotifications = task.getPendingNotifications().stream()
-                    .map(notification -> dateConverterDelegate.convertToInstant(task.getDeadline(), notification))
-                    .collect(Collectors.toList());
+                .map(notification -> dateConverterDelegate.convertToInstant(task.getDeadline(), notification))
+                .toList();
             task.setPendingNotifications(convertedNotifications);
         }
         return taskRepository.save(task);
+    }
+
+    @Override
+    @Transactional
+    public void create(String userTelegramId, String name) {
+        log.info("Internal: creating task for telegram user {} with name {}", userTelegramId, name);
+        Project bucketProject = projectRepository.getBucketProject(userTelegramId);
+        Task task = new Task()
+            .setData(name)
+            .setProject(bucketProject)
+            .setStatus(TaskStatus.BACKLOG);
+        taskRepository.save(task);
     }
 }
